--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link
-      rel="icon"
-      href="https://image.flaticon.com/icons/png/512/2784/2784459.png"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <title>when2meet</title>
-    <link href="/css/app.16b0ab68.css" rel="preload" as="style" />
-    <link href="/css/chunk-vendors.77fc7fd4.css" rel="preload" as="style" />
-    <link href="/js/app.50f62c3a.js" rel="preload" as="script" />
-    <link href="/js/chunk-vendors.33656fe1.js" rel="preload" as="script" />
-    <link href="/css/chunk-vendors.77fc7fd4.css" rel="stylesheet" />
-    <link href="/css/app.16b0ab68.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but when2meet doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-    <script src="/js/chunk-vendors.33656fe1.js"></script>
-    <script src="/js/app.50f62c3a.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://image.flaticon.com/icons/png/512/2784/2784459.png"><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400;1,600;1,700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><title>when2meet</title><link href="/css/app.16b0ab68.css" rel="preload" as="style"><link href="/css/chunk-vendors.77fc7fd4.css" rel="preload" as="style"><link href="/js/app.251916b1.js" rel="preload" as="script"><link href="/js/chunk-vendors.33656fe1.js" rel="preload" as="script"><link href="/css/chunk-vendors.77fc7fd4.css" rel="stylesheet"><link href="/css/app.16b0ab68.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but when2meet doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.33656fe1.js"></script><script src="/js/app.251916b1.js"></script></body></html>
